# llm_drone

./: README.md
src/airsim_pkg/: package.xml  setup.cfg  setup.py
src/airsim_pkg/airsim_pkg/: airsim_image_publisher.py
src/airsim_pkg/launch/: airsim.launch.py
src/llm_drone_agent/: package.xml  setup.cfg  setup.py
src/llm_drone_agent/llm_drone_agent/: drone_agent.py  tools.py
src/px4_ros2_control/: CMakeLists.txt  package.xml
src/px4_ros2_control/config/: helicopter.yaml
src/px4_ros2_control/include/px4_ros2_control/: control_mode.hpp
src/px4_ros2_control/launch/: control_mode.launch.py
src/px4_ros2_control/src/: control_mode.cpp
src/px4_ros2_control/srv/: SetMode.srv
src/yolo_object_detection/: package.xml  setup.py
src/yolo_object_detection/config/: yolo_params.yaml
src/yolo_object_detection/launch/: yolo_object_detection.launch.py
src/yolo_object_detection/yolo_object_detection/: keyboard_pygame.py  yolo.py
